[package]
name = "dfbhd_mus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
anyhow = "1.0.75"
itertools = "0.11.0"
rayon = "1.7.0"
arrayvec = "0.7.4"
rodio = "0.20.1"
ncurses = "6.0.1"
